# scopekit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
.claude/: launch.json
docs/: index.html
scopekit/: __init__.py  cli.py  init_cmd.py  presets.py  prompt.py  selector.py  stats.py  tree.py  web.py
