[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scopekit"
version = "0.1.0"
description = "Stop paying for AI to read your entire codebase. Scope the folders before the session starts."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "John", email = "john24alex@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["questionary>=2.0.0"]
keywords = ["claude", "ai", "developer-tools", "tokens", "debugging", "cli", "tui"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/john24alex/scopekit"
Repository = "https://github.com/john24alex/scopekit"
"Bug Tracker" = "https://github.com/john24alex/scopekit/issues"

[project.scripts]
scopekit = "scopekit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scopekit"]
